# demoucron-haskell

./: LICENSE  README.md  demoucron-haskell.cabal
src/: Demoucron.hs
test/: Spec.hs
