cabal-version:      2.4
name:               demoucron-haskell
version:            0.1.0.0

synopsis: Fast demoucron algorithm for parallel evaluataion of dependency graphs.

copyright:          2023 Ivan Iablochkin
license:            BSD-3-Clause
author:             alleksandrgall
maintainer:         alleksandrgall@gmail.com

extra-source-files: README.md

library
    exposed-modules:  
      Demoucron
    build-depends:    
      base ^>=4.16.4.0,
      algebraic-graphs,
      containers,
      vector,
      primitive,
      deepseq
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall -Wincomplete-patterns -O2 -fspecialise-aggressively

test-suite test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:   test
  default-language: Haskell2010
  ghc-options: -Wall -O2 +RTS -A64m -AL768m -RTS -threaded -rtsopts -with-rtsopts=-N
  build-depends: 
    base ^>=4.16.4.0,
    algebraic-graphs,
    QuickCheck,
    demoucron-haskell,
    hspec